--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Cadastrar"
-            android:textColor="@android:color/background_dark" />
+            android:textColor="@android:color/background_light" />
 
         <Button
             android:id="@+id/btnSobre"
